# gettext

./: README.md  fpm.toml  meson.build  zh_CN.mo  zh_CN.po
example/: 1.txt  example_read.f90  xgettext.f90
src/: gettext_module.f90  meson.build
src/container/: gettext_hash_table.f90  gettext_sll.f90  gettext_sll_iterator.f90  gettext_sll_node.f90
src/utils/: gettext_constants.f90  gettext_hash.f90  gettext_utils.f90
